2002-07-08  Marius Vollmer  <mvo@zagadka.ping.de>

	* slib.scm (make-exchanger): Added.  Thanks to Clinton Ebadi!

2002-06-02  Marius Vollmer  <mvo@zagadka.ping.de>

	* boot-9.scm (file-set-position): Make third argument optional,
	for SCM compatibility.
	(file-position): simplify definition.

2002-05-16  Rob Browning  <rlb@defaultvalue.org>

	* boot-9.scm (expt): switch if sense and use negative? rather than
	>= 0.

2002-05-10  Marius Vollmer  <marius.vollmer@uni-dortmund.de>

	* Makefile.am (uninstall-local): New, to remove the file installed
	by install-data-hook.

2002-05-03  Thien-Thi Nguyen  <ttn@giblet.glug.org>

	* Makefile.am (install-data-hook): Fix scheduling bug:
	Rename from `install-data-local'.

2002-03-12  Rob Browning  <rlb@defaultvalue.org>

	* syncase.scm (gensym): fix failure on non-threaded systems.

2002-03-05  Thien-Thi Nguyen  <ttn@giblet.glug.org>

	* ftw.scm: New file.

	* Makefile.am (ice9_sources): Add ftw.scm.

2002-03-04  Rob Browning  <rlb@defaultvalue.org>

	* syncase.scm (gensym): fix bad let.

2002-03-03  Rob Browning  <rlb@defaultvalue.org>

	* syncase.scm: add a simple mutex to gensym.

2002-02-26  Thien-Thi Nguyen  <ttn@giblet.glug.org>

	* Makefile.am: Update path to pre-inst-guile automake frag.

	* boot-9.scm: Comment grammar fixes; nfc.
	Thanks to Christopher Cramer.

2002-02-24  Rob Browning  <rlb@defaultvalue.org>

	* syncase.scm (gensym): redefine locally so we can control it's
	properties.  This is in preparation for changing the future public
	gensym to produce unreadable symbols.

	* psyntax.pp: updated to reflect new syncase.scm.

2002-02-08  Thien-Thi Nguyen  <ttn@giblet.glug.org>

	* Makefile.am (AUTOMAKE_OPTIONS): Replace "foreign" with "gnu".

2002-02-07  Thien-Thi Nguyen  <ttn@giblet.glug.org>

	* regex.scm: Add commentary; nfc.

2002-02-05  Thien-Thi Nguyen  <ttn@giblet.glug.org>

	* Makefile.am: Include $(top_srcdir)/pre-inst-guile.am.

	(psyntax.pp): Use $(preinstguile).
