@@ -1,3 +1,7 @@
+2002-09-15  Marius Vollmer  <mvo@zagadka.ping.de>
+
+	* boot-9.scm (feature?): Added deprecation message.
+
 2002-07-08  Marius Vollmer  <mvo@zagadka.ping.de>
 
 	* slib.scm (make-exchanger): Added.  Thanks to Clinton Ebadi!
